<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_ic"
        android:title="@string/home">
    </item>
    <item
        android:id="@+id/picturesFragment"
        android:icon="@drawable/artist_icon"
        android:title="@string/artists">
    </item>
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_ic"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/favorites_ic"
        android:title="@string/favorites">
    </item>
    <item
        android:id="@+id/ticketsFragment"
        android:icon="@drawable/ticket_ic"
        android:title="@string/tickets">
    </item>
</menu>